# unison-editor

./: .gitignore  .unisonHistory  DEVELOPMENT.md  MONACO_INTEGRATION.md  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: index.html  unison-api-feature-requests.md
src/: App.css  App.tsx  doc-syntax.css  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  file_watcher.rs  lib.rs  lsp_proxy.rs  main.rs  mcp_client.rs  port_utils.rs  ucm_api.rs  ucm_pty.rs
src/components/: AlertModal.tsx  BottomPanelSplitter.tsx  Breadcrumbs.tsx  CodebaseActions.tsx  CollapsiblePanelStack.tsx  CommandPalette.css  CommandPalette.tsx  ConnectionStatus.tsx  ContextMenu.tsx  DefinitionCard.tsx  DefinitionStack.tsx  DefinitionViewer.tsx  DeleteConfirmModal.tsx  DocRenderer.tsx  DocumentOutline.tsx  Editor.tsx  ErrorBoundary.tsx  FileConflictModal.tsx  FileCreationModal.tsx  FileExplorer.tsx  FolderCreationModal.tsx  GeneralTerminal.tsx  KeyboardShortcutsSettings.css  KeyboardShortcutsSettings.tsx  LogPanel.tsx  NamespaceBrowser.tsx  NamespaceDeleteModal.tsx  NamespaceRenameModal.tsx  Navigation.tsx  OutlinePanelContent.tsx  ProjectBranchSelector.tsx  RenameModal.tsx  ResizableSplitter.tsx  ResizableThreeColumn.tsx  RunPane.tsx  RunPanel.tsx  SyntaxRenderer.tsx  TabBar.tsx  UCMConflictModal.tsx  UCMNotFoundModal.tsx  (+7 more)
src/editor/: unisonLanguage.ts
src/hooks/: useKeyboardShortcuts.ts
(+40 files in other folders)
