[package]
name = "unison-editor"
version = "0.1.0"
description = "A modern IDE for the Unison programming language"
authors = ["Kingsley Hendrickse"]
license = "MIT"
repository = "https://github.com/kingsleyh/unison-editor"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "unison_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
anyhow = "1.0"
portable-pty = "0.8"
parking_lot = "0.12"
dirs = "5"
notify = "6.1"
